@@ -1,5 +1,10 @@
 2004-12-10  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: move a few definitions to get an
+	alphabetically ordered file.
+
+2004-12-10  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: change application/x-python to
 	text/x-python, fixes #208, please complain if you think this is wrong.
 
